--- a/data preprocessing.ipynb
+++ b/data preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 183,
    "id": "bb62f9fe-611e-4df3-b968-7f41bca6d41f",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 184,
    "id": "02067d59-0400-4089-9d3f-d43f2041c403",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 185,
    "id": "5615022c-f54e-4dc9-8385-a79683ec6307",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 186,
    "id": "7de1c7ac-6905-4b39-878d-1093ec868bae",
    "metadata": {},
    "outputs": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 187,
    "id": "6bbaf8f0-2792-4e4b-b652-5e601a1a0e32",
    "metadata": {},
    "outputs": [
@@ -340,7 +340,7 @@
        "4              NaN    NaN  "
       ]
      },
-     "execution_count": 150,
+     "execution_count": 187,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 188,
    "id": "19d7c2bc-6670-464a-82e5-01994e0673fd",
    "metadata": {},
    "outputs": [],
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 189,
    "id": "d40d702d-a011-4426-b00a-07ad0601769d",
    "metadata": {},
    "outputs": [
@@ -486,7 +486,7 @@
        "4  10\\n                        Yaşında  2. Kat  "
       ]
      },
-     "execution_count": 152,
+     "execution_count": 189,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 190,
    "id": "1c46d969-28e8-45e0-be90-503f03b51dcb",
    "metadata": {},
    "outputs": [
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 191,
    "id": "17ada12c-f884-419d-9a17-53b870133ef8",
    "metadata": {},
    "outputs": [],
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 192,
    "id": "8f21460b-6b2e-4464-845c-7c662563b536",
    "metadata": {},
    "outputs": [
@@ -752,7 +752,7 @@
        "4                emek  "
       ]
      },
-     "execution_count": 155,
+     "execution_count": 192,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -763,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 193,
    "id": "f9854222-3391-416d-9e4d-4005d5fc0cf2",
    "metadata": {},
    "outputs": [
@@ -801,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 194,
    "id": "096b610e-84b9-43ae-be19-2469fbb7a956",
    "metadata": {},
    "outputs": [],
@@ -814,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 195,
    "id": "541b39c2-3ade-43f2-8a63-9139e00d2a76",
    "metadata": {},
    "outputs": [
@@ -834,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 196,
    "id": "a4e5db4c-524a-4c83-8cc4-ac00ce4fc2ce",
    "metadata": {},
    "outputs": [],
@@ -844,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 197,
    "id": "007d1e24-f4ca-4e83-b1d0-b02134e710ea",
    "metadata": {},
    "outputs": [
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 198,
    "id": "8811814a-8e1b-4659-ba27-e2e601387112",
    "metadata": {},
    "outputs": [],
@@ -905,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 199,
    "id": "fd556797-c7ff-445c-85aa-09fbc069a1ef",
    "metadata": {},
    "outputs": [
@@ -1028,7 +1028,7 @@
        "4  2. Kat  istanbul  sancaktepe                emek     4            1  215  "
       ]
      },
-     "execution_count": 162,
+     "execution_count": 199,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1040,7 +1040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 200,
    "id": "a17d19c9-411a-4e9e-b789-b09c10da3c15",
    "metadata": {},
    "outputs": [
@@ -1125,7 +1125,7 @@
        "       '54\\n                        Yaşında'], dtype=object)"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 200,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1136,7 +1136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 201,
    "id": "f02aee09-49d7-4849-8abd-cf37b389483d",
    "metadata": {},
    "outputs": [],
@@ -1148,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 202,
    "id": "a028b9b7-22fc-4985-bdce-a0926064a796",
    "metadata": {},
    "outputs": [
@@ -1171,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 203,
    "id": "641cbec6-bdec-4eb6-9c22-ca90b72a4216",
    "metadata": {},
    "outputs": [
@@ -1194,7 +1194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 204,
    "id": "ea8e14f1-9e8e-4a66-8df5-565a314a8d70",
    "metadata": {},
    "outputs": [],
@@ -1227,7 +1227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 205,
    "id": "a962a364-9bd4-46bc-ab63-b16fdc76e088",
    "metadata": {},
    "outputs": [
@@ -1246,7 +1246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 206,
    "id": "ad5c6e50-cd73-4183-878f-75b485e62904",
    "metadata": {},
    "outputs": [],
@@ -1256,7 +1256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 207,
    "id": "1431e831-9199-4d95-98b1-c0ef142404da",
    "metadata": {},
    "outputs": [],
@@ -1266,7 +1266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 208,
    "id": "fb300433-1931-42a3-91d3-119b5887ceda",
    "metadata": {},
    "outputs": [
@@ -1383,7 +1383,7 @@
        "4            1  215   10      2  "
       ]
      },
-     "execution_count": 171,
+     "execution_count": 208,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1394,7 +1394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 209,
    "id": "fc99ab6e-60ba-421f-a688-660e02fb5ae6",
    "metadata": {},
    "outputs": [
@@ -1446,7 +1446,7 @@
        "       4650000, 2000000], dtype=int64)"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 209,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1457,7 +1457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 210,
    "id": "fd04e722-bf7f-498c-9c94-02884387deff",
    "metadata": {},
    "outputs": [],
@@ -1467,17 +1467,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 211,
    "id": "7cc85bc3-aaa2-4b0e-befd-52467f67c428",
    "metadata": {},
    "outputs": [],
    "source": [
-    "drop_columns(df, [\"list-view-price\"])"
+    "drop_columns(df, [\"list-view-price\", \"city\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 212,
    "id": "3e090e15-253c-4176-9a25-5a1f0a7d349e",
    "metadata": {},
    "outputs": [
@@ -1502,7 +1502,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>city</th>\n",
        "      <th>district</th>\n",
        "      <th>neighborhood</th>\n",
        "      <th>room</th>\n",
@@ -1516,7 +1515,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>istanbul</td>\n",
        "      <td>besiktas</td>\n",
        "      <td>levazim</td>\n",
        "      <td>3</td>\n",
@@ -1528,7 +1526,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>istanbul</td>\n",
        "      <td>sisli</td>\n",
        "      <td>harbiye</td>\n",
        "      <td>3</td>\n",
@@ -1540,7 +1537,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>istanbul</td>\n",
        "      <td>sisli</td>\n",
        "      <td>halide_edip_adivar</td>\n",
        "      <td>1</td>\n",
@@ -1552,7 +1548,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>istanbul</td>\n",
        "      <td>sisli</td>\n",
        "      <td>19_mayis</td>\n",
        "      <td>2</td>\n",
@@ -1564,7 +1559,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>istanbul</td>\n",
        "      <td>sancaktepe</td>\n",
        "      <td>emek</td>\n",
        "      <td>4</td>\n",
@@ -1579,22 +1573,15 @@
        "</div>"
       ],
       "text/plain": [
-       "       city    district        neighborhood  room  living_room area  age  \\\n",
-       "0  istanbul    besiktas             levazim     3            1  140   40   \n",
-       "1  istanbul       sisli             harbiye     3            1  150   40   \n",
-       "2  istanbul       sisli  halide_edip_adivar     1            1   70   22   \n",
-       "3  istanbul       sisli            19_mayis     2            1  105   22   \n",
-       "4  istanbul  sancaktepe                emek     4            1  215   10   \n",
-       "\n",
-       "   floor   price  \n",
-       "0      7   77000  \n",
-       "1      4  250000  \n",
-       "2     -3   16000  \n",
-       "3      4   26000  \n",
-       "4      2   60000  "
+       "     district        neighborhood  room  living_room area  age  floor   price\n",
+       "0    besiktas             levazim     3            1  140   40      7   77000\n",
+       "1       sisli             harbiye     3            1  150   40      4  250000\n",
+       "2       sisli  halide_edip_adivar     1            1   70   22     -3   16000\n",
+       "3       sisli            19_mayis     2            1  105   22      4   26000\n",
+       "4  sancaktepe                emek     4            1  215   10      2   60000"
       ]
      },
-     "execution_count": 175,
+     "execution_count": 212,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1605,7 +1592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 213,
    "id": "f008ca3e-d1f2-460a-aa7f-cfe57daac7d8",
    "metadata": {},
    "outputs": [
@@ -1615,20 +1602,19 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 5928 entries, 0 to 5927\n",
-      "Data columns (total 9 columns):\n",
+      "Data columns (total 8 columns):\n",
       " #   Column        Non-Null Count  Dtype \n",
       "---  ------        --------------  ----- \n",
-      " 0   city          5928 non-null   object\n",
-      " 1   district      5928 non-null   object\n",
-      " 2   neighborhood  5928 non-null   object\n",
-      " 3   room          5928 non-null   int32 \n",
-      " 4   living_room   5928 non-null   int32 \n",
-      " 5   area          5928 non-null   object\n",
-      " 6   age           5928 non-null   int32 \n",
-      " 7   floor         5928 non-null   int32 \n",
-      " 8   price         5928 non-null   int32 \n",
-      "dtypes: int32(5), object(4)\n",
-      "memory usage: 301.2+ KB\n"
+      " 0   district      5928 non-null   object\n",
+      " 1   neighborhood  5928 non-null   object\n",
+      " 2   room          5928 non-null   int32 \n",
+      " 3   living_room   5928 non-null   int32 \n",
+      " 4   area          5928 non-null   object\n",
+      " 5   age           5928 non-null   int32 \n",
+      " 6   floor         5928 non-null   int32 \n",
+      " 7   price         5928 non-null   int32 \n",
+      "dtypes: int32(5), object(3)\n",
+      "memory usage: 254.8+ KB\n"
      ]
     }
    ],
@@ -1638,12 +1624,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 216,
    "id": "be5076a2-536e-457d-a071-4962e0a0d2d2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['city'] = df['city'].astype('category')\n",
+    "\n",
     "df['district'] = df['district'].astype('category')\n",
     "df['neighborhood'] = df['neighborhood'].astype('category')\n",
     "df['room'] = df['room'].astype('int')\n",
@@ -1656,7 +1642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 217,
    "id": "3e69b7bf-cc9f-4126-9137-932de605363a",
    "metadata": {},
    "outputs": [
@@ -1666,20 +1652,19 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 5928 entries, 0 to 5927\n",
-      "Data columns (total 9 columns):\n",
+      "Data columns (total 8 columns):\n",
       " #   Column        Non-Null Count  Dtype   \n",
       "---  ------        --------------  -----   \n",
-      " 0   city          5928 non-null   category\n",
-      " 1   district      5928 non-null   category\n",
-      " 2   neighborhood  5928 non-null   category\n",
-      " 3   room          5928 non-null   int32   \n",
-      " 4   living_room   5928 non-null   int32   \n",
-      " 5   area          5928 non-null   int32   \n",
-      " 6   age           5928 non-null   int32   \n",
-      " 7   floor         5928 non-null   int32   \n",
-      " 8   price         5928 non-null   int32   \n",
-      "dtypes: category(3), int32(6)\n",
-      "memory usage: 184.1 KB\n"
+      " 0   district      5928 non-null   category\n",
+      " 1   neighborhood  5928 non-null   category\n",
+      " 2   room          5928 non-null   int32   \n",
+      " 3   living_room   5928 non-null   int32   \n",
+      " 4   area          5928 non-null   int32   \n",
+      " 5   age           5928 non-null   int32   \n",
+      " 6   floor         5928 non-null   int32   \n",
+      " 7   price         5928 non-null   int32   \n",
+      "dtypes: category(2), int32(6)\n",
+      "memory usage: 178.2 KB\n"
      ]
     }
    ],
@@ -1689,7 +1674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 218,
    "id": "f4666265-d59a-4dc4-9dfa-f60267abe279",
    "metadata": {},
    "outputs": [],
@@ -1700,7 +1685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 219,
    "id": "a7c778b5-b18f-4f7f-91fc-686d2d3598bc",
    "metadata": {},
    "outputs": [
@@ -1708,46 +1693,45 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "       city    district        neighborhood  room  living_room  area  age  \\\n",
-      "0  istanbul    besiktas             levazim     3            1   140   40   \n",
-      "1  istanbul       sisli             harbiye     3            1   150   40   \n",
-      "2  istanbul       sisli  halide_edip_adivar     1            1    70   22   \n",
-      "3  istanbul       sisli            19_mayis     2            1   105   22   \n",
-      "4  istanbul  sancaktepe                emek     4            1   215   10   \n",
-      "5  istanbul  beylikduzu             kavakli     7            2   750   25   \n",
-      "6  istanbul      beykoz           ortacesme     2            1    75   35   \n",
-      "7  istanbul     sariyer         zekeriyakoy     7            2   350   14   \n",
-      "8  istanbul     sariyer             poligon     2            1   159    6   \n",
-      "9  istanbul    cekmekoy           catalmese     2            1    80    8   \n",
+      "     district        neighborhood  room  living_room  area  age  floor  \\\n",
+      "0    besiktas             levazim     3            1   140   40      7   \n",
+      "1       sisli             harbiye     3            1   150   40      4   \n",
+      "2       sisli  halide_edip_adivar     1            1    70   22     -3   \n",
+      "3       sisli            19_mayis     2            1   105   22      4   \n",
+      "4  sancaktepe                emek     4            1   215   10      2   \n",
+      "5  beylikduzu             kavakli     7            2   750   25     -1   \n",
+      "6      beykoz           ortacesme     2            1    75   35      1   \n",
+      "7     sariyer         zekeriyakoy     7            2   350   14     -1   \n",
+      "8     sariyer             poligon     2            1   159    6     -2   \n",
+      "9    cekmekoy           catalmese     2            1    80    8      2   \n",
       "\n",
-      "   floor   price  area_per_room  \n",
-      "0      7   77000             35  \n",
-      "1      4  250000             37  \n",
-      "2     -3   16000             35  \n",
-      "3      4   26000             35  \n",
-      "4      2   60000             43  \n",
-      "5     -1   75000             83  \n",
-      "6      1   14000             25  \n",
-      "7     -1  150000             38  \n",
-      "8     -2  180000             53  \n",
-      "9      2   22000             26  \n",
+      "    price  area_per_room  \n",
+      "0   77000             35  \n",
+      "1  250000             37  \n",
+      "2   16000             35  \n",
+      "3   26000             35  \n",
+      "4   60000             43  \n",
+      "5   75000             83  \n",
+      "6   14000             25  \n",
+      "7  150000             38  \n",
+      "8  180000             53  \n",
+      "9   22000             26  \n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 5928 entries, 0 to 5927\n",
-      "Data columns (total 10 columns):\n",
+      "Data columns (total 9 columns):\n",
       " #   Column         Non-Null Count  Dtype   \n",
       "---  ------         --------------  -----   \n",
-      " 0   city           5928 non-null   category\n",
-      " 1   district       5928 non-null   category\n",
-      " 2   neighborhood   5928 non-null   category\n",
-      " 3   room           5928 non-null   int32   \n",
-      " 4   living_room    5928 non-null   int32   \n",
-      " 5   area           5928 non-null   int32   \n",
-      " 6   age            5928 non-null   int32   \n",
-      " 7   floor          5928 non-null   int32   \n",
-      " 8   price          5928 non-null   int32   \n",
-      " 9   area_per_room  5928 non-null   int32   \n",
-      "dtypes: category(3), int32(7)\n",
-      "memory usage: 207.3 KB\n",
+      " 0   district       5928 non-null   category\n",
+      " 1   neighborhood   5928 non-null   category\n",
+      " 2   room           5928 non-null   int32   \n",
+      " 3   living_room    5928 non-null   int32   \n",
+      " 4   area           5928 non-null   int32   \n",
+      " 5   age            5928 non-null   int32   \n",
+      " 6   floor          5928 non-null   int32   \n",
+      " 7   price          5928 non-null   int32   \n",
+      " 8   area_per_room  5928 non-null   int32   \n",
+      "dtypes: category(2), int32(7)\n",
+      "memory usage: 201.4 KB\n",
       "None\n"
      ]
     }
@@ -1759,7 +1743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 220,
    "id": "230acf98-97cc-4841-805d-aea2d09a3eca",
    "metadata": {},
    "outputs": [],
